--- a/Todo.Web/Components/Pages/Home.razor
+++ b/Todo.Web/Components/Pages/Home.razor
@@ -66,7 +66,7 @@
 
 <StatusMessageComponent Message="@_statusMessage" IsError="@_isError" IsVisible = "@_viewStatusComponent"IsVisibleChanged="@HandleStatusMessageVisibility"/>
 
-@if (_selectedProject != null)
+@if (_selectedProject != null && _viewSharedProjectComponent)
 {
     <ShareProjectComponent Project="@_selectedProject" IsVisible="@_viewSharedProjectComponent" IsVisibleChanged="@HandleViewSharedProjectComponent"/>
 }
