--- a/Todo.Web/Components/Pages/SharedProjectPage.razor
+++ b/Todo.Web/Components/Pages/SharedProjectPage.razor
@@ -60,9 +60,12 @@
         }
     }
 
-    <StatusMessageComponent Message="@_statusMessage" IsError="@_isError" IsVisible = "@_viewStatusComponent" IsVisibleChanged="@HandleStatusMessageVisibility"/>
+    @if (_viewStatusComponent && string.IsNullOrWhiteSpace(_statusMessage))
+    {
+        <StatusMessageComponent Message="@_statusMessage" IsError="@_isError" IsVisible="@_viewStatusComponent"IsVisibleChanged="@HandleStatusMessageVisibility"/>
+    }
     
-    @if (CurrentProject != null)
+    @if (CurrentProject != null && _viewSharedProjectComponent)
     {
         <ShareProjectComponent Project="CurrentProject" IsVisible="@_viewSharedProjectComponent" IsVisibleChanged="@HandleViewSharedProjectComponent"/>
     }
