--- a/Todo.Web/Components/Pages/ShareProjectComponent.razor
+++ b/Todo.Web/Components/Pages/ShareProjectComponent.razor
@@ -65,9 +65,10 @@
     
 </div>
 
-
-<StatusMessageComponent Message="@_statusMessage" IsError="@_isError" IsVisible = "@_viewStatusComponent"IsVisibleChanged="@HandleStatusMessageVisibility"/>
-
+@if (_viewStatusComponent && string.IsNullOrWhiteSpace(_statusMessage))
+{
+    <StatusMessageComponent Message="@_statusMessage" IsError="@_isError" IsVisible="@_viewStatusComponent"IsVisibleChanged="@HandleStatusMessageVisibility"/>
+}
 
 @code {
     [Parameter] public ProjectDto Project { get; set; }
